Sua mensagem de commit

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap');
 
+
 .modal-overlay {
     display: none;
     position: fixed;
@@ -35,7 +36,7 @@
 }
 
 .modal {
-    background: white;
+    background: #2b2b2b;
     padding: 20px;
     border-radius: 10px;
     text-align: center;
@@ -117,7 +118,7 @@
             <header>
                 <div class="row justify-content-between">
                     <div class="col-2">
-                        <img src="img/Logo Instituto.png" alt="logo">
+                        <img src="img/Logo Instituto.png" alt="logo" width="55px" height="50px">
                     </div>
                     <div class="col-6 align-self-center text-right">
                         <a href="#equipe" class="text-white lead" onclick="scrollToSection()"> Nossa equipe </a>
@@ -136,15 +137,7 @@
         
         </div>
     </div>
-
-    <!-- Modal para QR Code -->
-    <div class="modal-overlay" id="modal-overlay">
-        <div class="modal">
-            <button class="modal-close" id="modal-close">&times;</button>
-            <img src="img/qrcode-pix.png" alt="QR Code para Pix">
-        </div>
-    </div>
-
+    
     <!-- three-block -->
     <div class="container my-5 py-2">
         <h2 class="text-center font-weight-bold my-5">Nossos princípios</h2>
@@ -313,7 +306,7 @@
                     <li> Notícias e atualizações sobre o Instituto semanalmente </li>
                     <li> Avisos sobre vagas de cursos e promoções </li>
                 </ul>
-                <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-ghost">Ingressar</a>
+                <a href="https://api.whatsapp.com/send?phone=5513988120861&text=Ol%C3%A1!%20Vim%20pelo%20site%20do%20Instituto%20Amar%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20Plano%20Newsletter!" class="btn my-4 font-weight-bold atlas-cta cta-ghost" target="_blank">Ingressar</a>
             </div>
             <div data-aos="fade-up" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center py-4 mt-5 rounded" id="price-table__premium">
                 <h4 class="my-4"> Plano Ajudante</h4>
@@ -323,7 +316,7 @@
                     <li>Contribuição com arrecadação de valores para caridade e investimentos</li>
                     <li> Avisos sobre vagas de cursos e promoções </li>
                 </ul>
-                <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-green"> Assinar </a>
+                <a href="https://api.whatsapp.com/send?phone=5513988120861&text=Ol%C3%A1!%20Vim%20pelo%20site%20do%20Instituto%20Amar%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20Plano%20Ajudante!" class="btn my-4 font-weight-bold atlas-cta cta-green" target="_blank"> Assinar </a>
             </div>
             <div data-aos="fade-left" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center py-4 mt-5">
                 <h4 class="my-4">Plano Ajudante Plus</h4>
@@ -334,7 +327,7 @@
                     <li> Avisos sobre vagas de cursos e promoções </li>
                     <li> Desconto em oficinas e workshops pagos </li>
                 </ul>
-                <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-ghost">Assinar</a>
+                <a href="https://api.whatsapp.com/send?phone=5513988120861&text=Ol%C3%A1!%20Vim%20pelo%20site%20do%20Instituto%20Amar%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20Plano%20Ajudante%20Plus!" class="btn my-4 font-weight-bold atlas-cta cta-ghost" target="_blank">Assinar</a>
             </div>
         </div>
     </div>
