--- a/eventoz.html
+++ b/eventoz.html
@@ -82,8 +82,8 @@
     </div>
 
      <!-- Evento Afrodite-se -->
-     <h2 class="text-center font-weight-bold my-5">Evento Juninho</h2>
-     <h4 class="text-center font-weight-bold my-4">Facilitadora: Marcos Martinz</h4>
+     <h2 class="text-center font-weight-bold my-5">Evento Afrodite-se/h2>
+     <h4 class="text-center font-weight-bold my-4">Facilitadora: Carmem Catelli</h4>
      <div class="row" style="padding: 20px; overflow-y: hidden;">
          <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center">
              <img src="imgeventos/afrodite 2.jpg" alt="Anti-spam" class="mx-auto" style="border-radius: 20px; overflow-y: hidden;">
@@ -165,7 +165,7 @@
                     <li> Notícias e atualizações sobre o Instituto semanalmente </li>
                     <li> Avisos sobre vagas de cursos e promoções </li>
                 </ul>
-                <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-ghost">Ingressar</a>
+                <a href="https://api.whatsapp.com/send?phone=5513988120861&text=Ol%C3%A1!%20Vim%20pelo%20site%20do%20Instituto%20Amar%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20Plano%20Newsletter!" class="btn my-4 font-weight-bold atlas-cta cta-ghost" target="_blank">Ingressar</a>
             </div>
             <div data-aos="fade-up" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center py-4 mt-5 rounded" id="price-table__premium">
                 <h4 class="my-4"> Plano Ajudante</h4>
@@ -173,21 +173,20 @@
                 <ul class="list-unstyled">
                     <li>Notícias e atualizações sobre o Instituto semanalmente</li>
                     <li>Contribuição com arrecadação de valores para caridade e investimentos</li>
-                    <li>Aviso e prioridade em vagas de cursos</li>
-                    <li>Desconto na alimentação</li>
+                    <li> Avisos sobre vagas de cursos e promoções </li>
                 </ul>
-                <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-green"> Assinar </a>
+                <a href="https://api.whatsapp.com/send?phone=5513988120861&text=Ol%C3%A1!%20Vim%20pelo%20site%20do%20Instituto%20Amar%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20Plano%20Ajudante!" class="btn my-4 font-weight-bold atlas-cta cta-green" target="_blank"> Assinar </a>
             </div>
             <div data-aos="fade-left" data-aos-delay="200" data-aos-duration="1000" data-aos-once="true" class="col-md-4 text-center py-4 mt-5">
-                <h4 class="my-4">COMPRAR O INSTITUTO</h4>
-                <p class="font-weight-bold">R$ <span class="display-2 font-weight-bold">4.000.000</span> / mês.</p>
+                <h4 class="my-4">Plano Ajudante Plus</h4>
+                <p class="font-weight-bold">R$ <span class="display-2 font-weight-bold">49,99</span> / mês.</p>
                 <ul class="list-unstyled">
-                    <li> Ganha o instituto </li>
-                    <li> Compra ele todo </li>
-                    <li> Dá uma viagem a vanessa à bahamas </li>
-                    <li> Gestão de Suporte </li>
+                    <li> Notícias e atualizações sobre o Instituto semanalmente</li>
+                    <li> Contribuição elevada com arrecadação de valores para caridade e investimentos</li>
+                    <li> Avisos sobre vagas de cursos e promoções </li>
+                    <li> Desconto em oficinas e workshops pagos </li>
                 </ul>
-                <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-ghost">Solicitar</a>
+                <a href="https://api.whatsapp.com/send?phone=5513988120861&text=Ol%C3%A1!%20Vim%20pelo%20site%20do%20Instituto%20Amar%20e%20gostaria%20de%20saber%20mais%20sobre%20o%20Plano%20Ajudante%20Plus!" class="btn my-4 font-weight-bold atlas-cta cta-ghost" target="_blank">Assinar</a>
             </div>
         </div>
     </div>
