--- a/doacao.html
+++ b/doacao.html
@@ -99,6 +99,7 @@
     max-width: 100%; /* Garante que a imagem não exceda a largura do contêiner */
     height: auto; /* Mantém a proporção da imagem */
 }
+
 </style>
 
 <body>
@@ -108,10 +109,7 @@
             <header>
                 <div class="row justify-content-between">
                     <div class="col-2">
-                        <img src="img/Logo Instituto.png" alt="logo">
-                    </div>
-                    <div class="col-6 align-self-center text-right">
-                        <a href="#equipe" class="text-white lead" onclick="scrollToSection()"> Nossa equipe </a>
+                        <img src="img/Logo Instituto.png" alt="logo" width="55px" height="50px">
                     </div>
                 </div>
             </header>
@@ -132,7 +130,9 @@
     <div class="container my-5 py-2">
         <h2 class="text-center font-weight-bold my-5">QR-Code PIX</h2>
         <div class="imagem-qrcode"> 
-            <img src="img/qrcode.jpg" alt="QRCODE PIX">
+            <img src="img/qrcode.jpg" style="border: #c92672; border-radius: 10px;"alt="QRCODE PIX">
+            <p> <b> Chave Pix: </b>  instituto.amar@gmail.com</p>
+            <br>
         </div>
 
         <div class="secao-informacao"> 
@@ -154,7 +154,7 @@
                         
                     </div>
                     <div data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="col-md-6 align-self-center flex-md-first">
-                        <img src="img/Colaboracao.png" alt="Safe and reliable" class="mx-auto d-block" style="border-radius: 25px;">
+                        <img src="img/Colaboracao.png" alt="Colaboração" class="mx-auto d-block" style="border-radius: 25px;">
                     </div>
                 </div>
             </div>
