--- a/eventoz.html
+++ b/eventoz.html
@@ -129,7 +129,7 @@
                     uma divindade afro-brasileira associada à guerra e à proteção. Além disso, o festival contou com apresentações de 
                     samba e capoeira, elementos essenciais da cultura afro-brasileira. Essa iniciativa não apenas promoveu a valorização 
                     e preservação das tradições afro-indígenas, mas também fortaleceu os laços comunitários e inaugurou um espaço 
-                    dedicado ao crescimento e inclusão na cidade. </p>
+                    dedicado ao crescimento e inclusão na cidade. <br> <a href="https://www.instagram.com/p/C7g4e3uAUOh/?img_index=1" target="_blank"> Acessar Instagram! </a> </p>
             </div>
         </div>
 
@@ -153,8 +153,11 @@
                         A proposta não apenas buscou a limpeza da praia, mas também promoveu a conscientização sobre a importância da preservação ambiental e da cultura local.
                         Durante o evento, voluntários se reuniram para recolher <b> 32kg de lixo e detritos </b>, revitalizando a beleza natural da praia. O clima de união e respeito pelo meio ambiente
                         fez com que todos se sentissem parte de algo maior. Além da limpeza, o projeto incluiu atividades culturais, como rodas de conversa e apresentações artísticas que 
-                        celebravam a rica herança afro-indígena da região. O momento em que os participantes se uniram para recolher o lixo foi especialmente tocante. Era como se a maré estivesse ajudando a limpar não apenas a praia, mas também as consciências, reforçando a importância de cuidarmos do nosso planeta. As cores vibrantes das vestimentas dos participantes, somadas à energia contagiante da música e das danças, tornaram tudo ainda mais mágico. </p>
-                </div>
+                        celebravam a rica herança afro-indígena da região. O momento em que os participantes se uniram para recolher o lixo foi especialmente tocante. Era como se a maré estivesse ajudando 
+                        a limpar não apenas a praia, mas também as consciências, reforçando a importância de cuidarmos do nosso planeta. As cores vibrantes das vestimentas dos participantes, somadas à 
+                        energia contagiante da música e das danças, tornaram tudo ainda mais mágico. <br> <a href="https://www.instagram.com/p/CqEEqeUOIQT/" target="_blank"> Acessar Instagram! </a> </p>
+                        
+                    </div>
             </div>
 
     <!-- price table -->
