--- a/index.html
+++ b/index.html
@@ -234,6 +234,17 @@
                 <p class="card-text" style="font-family: 'Hammersmith One', sans-serif;"><small class="text-muted">Atualizado em 18/07/2024</small></p>
             </div>
         </div>
+
+        <!-- Ramisa -->
+        <div class="card">
+            <img class="card-img-top" style="width: 450px; height: 250px; object-fit: cover; border-radius: 5px;" src="img/equipe/Rafael Almeida.jpg" alt="Boneco">
+            <div class="card-body" style="padding: 20px; background-color: #602337; border-radius: 10px; color:#e7e7e7;">
+                <h5 class="card-title" style="text-align: center; overflow-y: hidden;"><b> Râmisa </b></h5>
+                <p class="card-text" style="font-family: 'Hammersmith One', sans-serif;"> Professora de Dança Cigana</p>
+                <p class="card-text" style="font-family: 'Hammersmith One', sans-serif;"><small class="text-muted">Atualizado em 18/07/2024</small></p>
+            </div>
+        </div>
+
     </div>
 
         <!-- equipe 2 -->
@@ -268,6 +279,18 @@
                     <p class="card-text" style="font-family: 'Hammersmith One', sans-serif;"><small class="text-muted">Atualizado em 18/07/2024</small></p>
                 </div>
             </div>
+
+            <!-- Rafael -->
+            <div class="card">
+                <img class="card-img-top" style="width: 450px; height: 250px; object-fit: cover; border-radius: 5px;" src="img/equipe/Rafael Almeida.jpg" alt="Boneco">
+                <div class="card-body" style="padding: 20px; background-color: #602337; border-radius: 10px; color:#e7e7e7;">
+                    <h5 class="card-title" style="text-align: center; overflow-y: hidden;"><b> Rafael Almeida </b></h5>
+                    <p class="card-text" style="font-family: 'Hammersmith One', sans-serif;"> Desginer do Instituto Amar</p>
+                    <p class="card-text" style="font-family: 'Hammersmith One', sans-serif;"><small class="text-muted">Atualizado em 18/07/2024</small></p>
+                </div>
+            </div>
+        </div>
+
         </div>
 
     <div class="secao-informacao"> 
