--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <h2 class="font-weight-bold"> Nossos eventos </h2>
                     <p class="my-4"> Sempre buscando a perfeição, o Instituto está sempre em constante busca à excelência
                         e graças a isso, somos de confiança e excepcionais nos eventos que executamos em nosso espaço. Saiba mais já. </p>
-                    <a href="eventoz.html" class="btn my-4 font-weight-bold atlas-cta cta-blue"> Saiba mais </a>
+                    <a href="eventos.html" class="btn my-4 font-weight-bold atlas-cta cta-blue"> Saiba mais </a>
                 </div>
                 <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 align-self-center">
                     <img src="img/feature-1.png" alt="Take a look inside" class="mx-auto d-block">
